--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,6 @@
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
 @import "@fontsource-variable/outfit";
-/*@import "@fontsource-variable/outfit";*/
 
 @custom-variant dark (&:is(.dark *));
 
@@ -12,8 +11,6 @@
 
     html,
     body {
-        /* @apply m-0 antialiased; */
-        /* Tailwind already has antialias utility */
         margin: 0;
         -webkit-font-smoothing: antialiased;
         font-family: "Outfit", sans-serif;
@@ -28,125 +25,164 @@
 
     * {
         @apply border-border outline-ring/50;
-        @apply border-border outline-ring/50;
-        @apply border-border outline-ring/50;
     }
 
     body {
         @apply font-sans bg-background text-foreground;
-        @apply font-sans bg-background text-foreground;
-        @apply font-sans bg-background text-foreground;
+        letter-spacing: var(--tracking-normal);
     }
 
     html {
-        @apply font-sans;
-        @apply font-sans;
         @apply font-sans;
     }
 }
 
 :root {
+    --background: oklch(0.9931 0.0035 39.4851);
+    --foreground: oklch(0.2101 0.0318 264.6645);
     --card: oklch(1 0 0);
-    --card-foreground: oklch(0.147 0.004 49.25);
+    --card-foreground: oklch(0.2101 0.0318 264.6645);
     --popover: oklch(1 0 0);
-    --popover-foreground: oklch(0.147 0.004 49.25);
-    --primary: oklch(0.65 0.18 132);
-    --primary-foreground: oklch(0.99 0.03 121);
-    --secondary: oklch(0.967 0.001 286.375);
-    --secondary-foreground: oklch(0.21 0.006 285.885);
-    --muted: oklch(0.97 0.001 106.424);
-    --muted-foreground: oklch(0.553 0.013 58.071);
-    --accent: oklch(0.97 0.001 106.424);
-    --accent-foreground: oklch(0.216 0.006 56.043);
-    --destructive: oklch(0.577 0.245 27.325);
-    --border: oklch(0.923 0.003 48.717);
-    --input: oklch(0.923 0.003 48.717);
-    --ring: oklch(0.709 0.01 56.259);
-    --chart-1: oklch(0.90 0.18 127);
-    --chart-2: oklch(0.85 0.21 129);
-    --chart-3: oklch(0.77 0.20 131);
-    --chart-4: oklch(0.65 0.18 132);
-    --chart-5: oklch(0.53 0.14 132);
-    --radius: 0.625rem;
-    --sidebar: oklch(0.985 0.001 106.423);
-    --sidebar-foreground: oklch(0.147 0.004 49.25);
-    --sidebar-primary: oklch(0.65 0.18 132);
-    --sidebar-primary-foreground: oklch(0.99 0.03 121);
-    --sidebar-accent: oklch(0.97 0.001 106.424);
-    --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
-    --sidebar-border: oklch(0.923 0.003 48.717);
-    --sidebar-ring: oklch(0.709 0.01 56.259);
-    --background: oklch(1 0 0);
-    --foreground: oklch(0.147 0.004 49.25);
+    --popover-foreground: oklch(0.2101 0.0318 264.6645);
+    --primary: oklch(0.864 0.1445 131.7944);
+    --primary-foreground: oklch(0.3012 0 0);
+    --secondary: oklch(0 0 0);
+    --secondary-foreground: oklch(1 0 0);
+    --muted: oklch(0.967 0.0029 264.5419);
+    --muted-foreground: oklch(0.551 0.0234 264.3637);
+    --accent: oklch(0.9603 0.008 98.8801);
+    --accent-foreground: oklch(0.2101 0.0318 264.6645);
+    --destructive: oklch(0.6368 0.2078 25.3313);
+    --destructive-foreground: oklch(0.9851 0 0);
+    --border: oklch(0.9276 0.0058 264.5313);
+    --input: oklch(0.9276 0.0058 264.5313);
+    --ring: oklch(0.6716 0.1368 48.513);
+    --chart-1: oklch(0.594 0.0443 196.0233);
+    --chart-2: oklch(0.7214 0.1337 49.9802);
+    --chart-3: oklch(0.8721 0.0864 68.5474);
+    --chart-4: oklch(0.6268 0 0);
+    --chart-5: oklch(0.683 0 0);
+    --sidebar: oklch(0.967 0.0029 264.5419);
+    --sidebar-foreground: oklch(0.2101 0.0318 264.6645);
+    --sidebar-primary: oklch(0.6716 0.1368 48.513);
+    --sidebar-primary-foreground: oklch(1 0 0);
+    --sidebar-accent: oklch(1 0 0);
+    --sidebar-accent-foreground: oklch(0.2101 0.0318 264.6645);
+    --sidebar-border: oklch(0.9276 0.0058 264.5313);
+    --sidebar-ring: oklch(0.6716 0.1368 48.513);
+    --font-sans: 'Outfit', ui-sans-serif, sans-serif, system-ui;
+    --font-serif: serif;
+    --font-mono: JetBrains Mono, monospace;
+    --radius: 0.6rem;
+    --shadow-x: 0px;
+    --shadow-y: 1px;
+    --shadow-blur: 0px;
+    --shadow-spread: -36px;
+    --shadow-opacity: 0;
+    --shadow-color: #000000;
+    --shadow-2xs: 0px 1px 0px -36px hsl(0 0% 0% / 0);
+    --shadow-xs: 0px 1px 0px -36px hsl(0 0% 0% / 0);
+    --shadow-sm: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 1px 2px -37px hsl(0 0% 0% / 0);
+    --shadow: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 1px 2px -37px hsl(0 0% 0% / 0);
+    --shadow-md: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 2px 4px -37px hsl(0 0% 0% / 0);
+    --shadow-lg: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 4px 6px -37px hsl(0 0% 0% / 0);
+    --shadow-xl: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 8px 10px -37px hsl(0 0% 0% / 0);
+    --shadow-2xl: 0px 1px 0px -36px hsl(0 0% 0% / 0);
+    --tracking-normal: 0rem;
+    --spacing: 0.25rem;
 }
 
 .dark {
-    --background: oklch(0.147 0.004 49.25);
-    --foreground: oklch(0.985 0.001 106.423);
-    --card: oklch(0.216 0.006 56.043);
-    --card-foreground: oklch(0.985 0.001 106.423);
-    --popover: oklch(0.216 0.006 56.043);
-    --popover-foreground: oklch(0.985 0.001 106.423);
-    --primary: oklch(0.77 0.20 131);
-    --primary-foreground: oklch(0.27 0.07 132);
-    --secondary: oklch(0.274 0.006 286.033);
-    --secondary-foreground: oklch(0.985 0 0);
-    --muted: oklch(0.268 0.007 34.298);
-    --muted-foreground: oklch(0.709 0.01 56.259);
-    --accent: oklch(0.268 0.007 34.298);
-    --accent-foreground: oklch(0.985 0.001 106.423);
-    --destructive: oklch(0.704 0.191 22.216);
-    --border: oklch(1 0 0 / 10%);
-    --input: oklch(1 0 0 / 15%);
-    --ring: oklch(0.553 0.013 58.071);
-    --chart-1: oklch(0.90 0.18 127);
-    --chart-2: oklch(0.85 0.21 129);
-    --chart-3: oklch(0.77 0.20 131);
-    --chart-4: oklch(0.65 0.18 132);
-    --chart-5: oklch(0.53 0.14 132);
-    --sidebar: oklch(0.216 0.006 56.043);
-    --sidebar-foreground: oklch(0.985 0.001 106.423);
-    --sidebar-primary: oklch(0.85 0.21 129);
-    --sidebar-primary-foreground: oklch(0.27 0.07 132);
-    --sidebar-accent: oklch(0.268 0.007 34.298);
-    --sidebar-accent-foreground: oklch(0.985 0.001 106.423);
-    --sidebar-border: oklch(1 0 0 / 10%);
-    --sidebar-ring: oklch(0.553 0.013 58.071);
+    --background: oklch(0.1797 0.0043 308.1928);
+    --foreground: oklch(0.8109 0 0);
+    --card: oklch(0.1822 0 0);
+    --card-foreground: oklch(0.8109 0 0);
+    --popover: oklch(0.1797 0.0043 308.1928);
+    --popover-foreground: oklch(0.8109 0 0);
+    --primary: oklch(0.7214 0.1337 49.9802);
+    --primary-foreground: oklch(0.1797 0.0043 308.1928);
+    --secondary: oklch(0.594 0.0443 196.0233);
+    --secondary-foreground: oklch(0.1797 0.0043 308.1928);
+    --muted: oklch(0.252 0 0);
+    --muted-foreground: oklch(0.6268 0 0);
+    --accent: oklch(0.3211 0 0);
+    --accent-foreground: oklch(0.8109 0 0);
+    --destructive: oklch(0.594 0.0443 196.0233);
+    --destructive-foreground: oklch(0.1797 0.0043 308.1928);
+    --border: oklch(0.252 0 0);
+    --input: oklch(0.252 0 0);
+    --ring: oklch(0.7214 0.1337 49.9802);
+    --chart-1: oklch(0.594 0.0443 196.0233);
+    --chart-2: oklch(0.7214 0.1337 49.9802);
+    --chart-3: oklch(0.8721 0.0864 68.5474);
+    --chart-4: oklch(0.6268 0 0);
+    --chart-5: oklch(0.683 0 0);
+    --sidebar: oklch(0.1822 0 0);
+    --sidebar-foreground: oklch(0.8109 0 0);
+    --sidebar-primary: oklch(0.7214 0.1337 49.9802);
+    --sidebar-primary-foreground: oklch(0.1797 0.0043 308.1928);
+    --sidebar-accent: oklch(0.3211 0 0);
+    --sidebar-accent-foreground: oklch(0.8109 0 0);
+    --sidebar-border: oklch(0.252 0 0);
+    --sidebar-ring: oklch(0.7214 0.1337 49.9802);
+    --font-sans: 'Outfit', ui-sans-serif, sans-serif, system-ui;
+    --font-serif: serif;
+    --font-mono: JetBrains Mono, monospace;
+    --radius: 0.6rem;
+    --shadow-x: 0px;
+    --shadow-y: 1px;
+    --shadow-blur: 0px;
+    --shadow-spread: -36px;
+    --shadow-opacity: 0;
+    --shadow-color: #000000;
+    --shadow-2xs: 0px 1px 0px -36px hsl(0 0% 0% / 0);
+    --shadow-xs: 0px 1px 0px -36px hsl(0 0% 0% / 0);
+    --shadow-sm: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 1px 2px -37px hsl(0 0% 0% / 0);
+    --shadow: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 1px 2px -37px hsl(0 0% 0% / 0);
+    --shadow-md: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 2px 4px -37px hsl(0 0% 0% / 0);
+    --shadow-lg: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 4px 6px -37px hsl(0 0% 0% / 0);
+    --shadow-xl: 0px 1px 0px -36px hsl(0 0% 0% / 0), 0px 8px 10px -37px hsl(0 0% 0% / 0);
+    --shadow-2xl: 0px 1px 0px -36px hsl(0 0% 0% / 0);
 }
 
 @theme inline {
-    --font-sans: 'Outfit', sans-serif;
-    --color-sidebar-ring: var(--sidebar-ring);
-    --color-sidebar-border: var(--sidebar-border);
-    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-    --color-sidebar-accent: var(--sidebar-accent);
-    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-    --color-sidebar-primary: var(--sidebar-primary);
-    --color-sidebar-foreground: var(--sidebar-foreground);
-    --color-sidebar: var(--sidebar);
-    --color-chart-5: var(--chart-5);
-    --color-chart-4: var(--chart-4);
-    --color-chart-3: var(--chart-3);
-    --color-chart-2: var(--chart-2);
-    --color-chart-1: var(--chart-1);
-    --color-ring: var(--ring);
-    --color-input: var(--input);
-    --color-border: var(--border);
-    --color-destructive: var(--destructive);
-    --color-accent-foreground: var(--accent-foreground);
-    --color-accent: var(--accent);
-    --color-muted-foreground: var(--muted-foreground);
-    --color-muted: var(--muted);
-    --color-secondary-foreground: var(--secondary-foreground);
-    --color-secondary: var(--secondary);
-    --color-primary-foreground: var(--primary-foreground);
-    --color-primary: var(--primary);
-    --color-popover-foreground: var(--popover-foreground);
-    --color-popover: var(--popover);
-    --color-card-foreground: var(--card-foreground);
-    --color-card: var(--card);
-    --color-foreground: var(--foreground);
+    --font-sans: var(--font-sans);
+    --font-mono: var(--font-mono);
+    --font-serif: var(--font-serif);
+
     --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-card: var(--card);
+    --color-card-foreground: var(--card-foreground);
+    --color-popover: var(--popover);
+    --color-popover-foreground: var(--popover-foreground);
+    --color-primary: var(--primary);
+    --color-primary-foreground: var(--primary-foreground);
+    --color-secondary: var(--secondary);
+    --color-secondary-foreground: var(--secondary-foreground);
+    --color-muted: var(--muted);
+    --color-muted-foreground: var(--muted-foreground);
+    --color-accent: var(--accent);
+    --color-accent-foreground: var(--accent-foreground);
+    --color-destructive: var(--destructive);
+    --color-destructive-foreground: var(--destructive-foreground);
+    --color-border: var(--border);
+    --color-input: var(--input);
+    --color-ring: var(--ring);
+    --color-chart-1: var(--chart-1);
+    --color-chart-2: var(--chart-2);
+    --color-chart-3: var(--chart-3);
+    --color-chart-4: var(--chart-4);
+    --color-chart-5: var(--chart-5);
+    --color-sidebar: var(--sidebar);
+    --color-sidebar-foreground: var(--sidebar-foreground);
+    --color-sidebar-primary: var(--sidebar-primary);
+    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+    --color-sidebar-accent: var(--sidebar-accent);
+    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+    --color-sidebar-border: var(--sidebar-border);
+    --color-sidebar-ring: var(--sidebar-ring);
+
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
     --radius-lg: var(--radius);
@@ -154,11 +190,29 @@
     --radius-2xl: calc(var(--radius) + 8px);
     --radius-3xl: calc(var(--radius) + 12px);
     --radius-4xl: calc(var(--radius) + 16px);
+
+    --shadow-2xs: var(--shadow-2xs);
+    --shadow-xs: var(--shadow-xs);
+    --shadow-sm: var(--shadow-sm);
+    --shadow: var(--shadow);
+    --shadow-md: var(--shadow-md);
+    --shadow-lg: var(--shadow-lg);
+    --shadow-xl: var(--shadow-xl);
+    --shadow-2xl: var(--shadow-2xl);
+
+    --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+    --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+    --tracking-normal: var(--tracking-normal);
+    --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+    --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+    --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
-/*---break---*/
-
 @layer base {
+    html {
+        font-size: var(--base-font-size);
+    }
+
     * {
         @apply border-border outline-ring/50;
     }
